--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,7 +24,8 @@
     "react-native": "0.71.7",
     "react-native-svg": "13.4.0",
     "typescript": "^4.9.4",
-    "expo-secure-store": "~12.1.1"
+    "expo-secure-store": "~12.1.1",
+    "expo-image-picker": "~14.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
